# py-project-dev-tools

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/base/: cleanup_repo.bat  clone_repo.bat  make_dev_tools_release.bat  make_exe_release.bat  project_info.ini  refresh_deps.bat  setup_virtual_environment.bat  test_virtual_environment.bat  update_dev_tools.bat  upload_latest_to_repo.bat
assets/base/windows/: refresh_deps.bat  setup_default_virtual_environment.bat  setup_virtual_environment.bat  test_virtual_environment.bat  upload_latest_to_repo.bat
assets/dev_scripts/: build_exe.bat  clone_repo.bat  setup_virtual_environment.bat
assets/dev_tools/: lint_code.bat  make_exe_release.bat
assets/dev_tools/windows/: cleanup_repo.bat  make_exe_release.bat  test_exe_release.bat
src/py_project_dev_tools/: __main__.py  __main__.pyw  _version.py  cli.py  cli_py.py  log_colors.py  log_info.py  log_py.py  main.py  old_code.py
