[project]
name = "py-project-dev-tools"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = []
authors = [
  { name = "Mythical", email = "MythicalData@gmail.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "pyinstaller>=6.14.2",
    "requests>=2.32.4",
    "rich>=14.0.0",
]

[project.scripts]
py_project_dev_tools = "py_project_dev_tools.__main__:main"

[project.urls]
Documentation = "https://github.com/Mythical-Github/py-project-dev-tools/blob/main/README.md"
Issues = "https://github.com/Mythical-Github/py-project-dev-tools/issues"
Source = "https://github.com/Mythical-Github/py-project-dev-tools"

[tool.pyright]
extraPaths = [".venv/Lib/site-packages"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
